Fixing discount API
